Changes -Kinda Finished Part 3 --->Admin (place/remove 1 or more holds to/from student)...student can have 1 or more holds ---->Admin can set what student services to restrict for a particular hold. [Button in the bottom right corner of student Holds tab ----->Students can view their holds. ---->I added a accessDenied template which acts is used shown when a page is blocked by a hold or ...for Enrollment closing by admin. So two explicit messages for two scenarios. ---->I tweaked some of the UI[navbar, hoome page, my holds page, and studentAudit page) mostly on the student side. Havent worked on the Ui for admin. ----> Will tweak some other stuff in the mean time