@@ -557,9 +557,6 @@ public class CourseService {
                 );
                 groupNode.getChildren().add(childNode);
 
-                // If you want to go multiple levels deep (the child’s prerequisites, etc.),
-                // you could RECURSE here: childNode.setChildren( ... buildPrerequisiteTree(...) ... )
-                // But be mindful to avoid cycles in your data.
             }
 
             children.add(groupNode);
@@ -591,7 +588,7 @@ public class CourseService {
                 .sorted(Comparator.comparingInt(CoursePrerequisite::getGroupId))
                 .map(CoursePrerequisite::getGroupId)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         Map<Integer, Set<Integer>> parentToChildGroupMap = new HashMap<>();
         for (CoursePrerequisite cp : prerequisites) {
@@ -645,7 +642,6 @@ public class CourseService {
             }
             return depth == 0;
         };
-
         // Recursive parser
         Function<String, String> parse = new Function<>() {
             @Override
@@ -675,16 +671,12 @@ public class CourseService {
                 return opNode;
             }
         };
-
         // Root
-        String root = getNode.apply(courseCode + "\n(Main Course)");
+        String root = getNode.apply(courseCode + " (Main Course)");
         String body = parse.apply(expression);
         edges.add(root + " --> " + body);
-
         nodes.forEach(line -> sb.append(line).append("\n"));
         edges.forEach(line -> sb.append(line).append("\n"));
-
-
         return sb.toString();
     }
     private List<String> splitByTopLevel(String expr, String operator) {
@@ -729,6 +721,27 @@ public class CourseService {
                 .map(Course::getCourseCode)
                 .collect(Collectors.toList());
     }
+
+    public String flattenMermaid(String code) {
+        StringBuilder result = new StringBuilder();
+        boolean inQuotes = false;
+
+        for (int i = 0; i < code.length(); i++) {
+            char c = code.charAt(i);
+
+            if (c == '"') {
+                inQuotes = !inQuotes;
+                result.append(c);
+            } else if ((c == '\n' || c == '\r') && !inQuotes) {
+                result.append("; ");
+            } else {
+                result.append(c);
+            }
+        }
+
+        return result.toString();
+    }
+
 
 
 }
